fixed book column overlapping issue

--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -179,7 +179,6 @@
   }
 }
 
-.books-col {
-  float: left;
-  width: 175px;
-}
+ .books {
+   min-width: 175px;
+ }
